<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GiveMeTime</string>
    <string name="action_settings">Settings</string>
    <string name="firstPage">Welcome and Disclaimer</string>

    <string name="secondPage">Calendar Selection</string>
    <string name="skipButton">Skip</string>
    <string name="continueButton">Continue</string>
    <string name="login">Signin in..</string>
    <string name="welcome_disclaimer_text">Welcome to GiveMeTime! Before starting using the app we\'ll need some little informations to help you organize everything better! \n Keep in mind that the more information you\'ll give to GiveMeTime, the more you\'ll have precise and efficient results. Don\'t worry: we care about your privacy and all the personal datas you\'ll insert will be stored only on your device and you\'ll be the only one who can access them.
\n The list of your tasks will be safely synchronized with your Google account to let you access your GiveMeTime calendar from every device, anyway, to protect your privacy, the informations related to GiveMeTime will be stored exclusively on your smartphone </string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="pick_account">Please, select your account</string>
    <string name="not_online">It seems that you are not connected. Please check connectivity and retry.</string>
	<string name="calendar_selection_text1">&quot;Welcome! Please import a calendar you own&quot;</string>
	<string name="event_list">Event List</string>
	<string name="event_list_text"></string>
	<string name="refresh">Refresh</string>
	<string name="new_event">Add New Event</string>
	<string name="action_today">Go to today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="pay_categories">This option is not available in the free version. Purchase the pro version in order to create your own personalized categories!</string>
    <string name="paid_create_event">This option is not available in the free version. Purchase the pro version in order to dinamically create events!</string>
    <string name="pay_deadline">This option is not available in the free version. Purchase the pro version in order to instantiate deadline-free events.</string>
    <string name="Not_available">Option not Available</string>
    <string name="select_time">If the event can be moved in an arbitrary range of time, please select it</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="plus">+</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="next">Next</string>
    <string name="calendar_selected_missing_title">Calendar not selected!</string>
    <string name="calendar_select_missing_msg">Before proceeding, please select a calendar from the list.</string>
    <string name="calendar_name">Calendar Name</string>
    <string name="calendar_owner">Calendar Owner</string>
    <string name="MainInfo">Main Event Informations</string>
    <string name="Locations">Event Location</string>
    <string name="EventDescription">Event Description</string>
    <string name="InsertTitle">Insert the Title</string>
    <string name="Show">Show</string>
    <string name="categories">Event Categories</string>
    <string name="event">Event: </string>
    <string name="eventName">Event Name</string>
    <string name="hasSetLocation">Has set location: </string>
    <string name="missing_data">Your event has the following missing data:</string>
    <string name="last_page_textView">Please, fill the available option with data for better recomendations!</string>
    <string name="location_not_set">Location not set</string>
    <string name="deadline">Deadline</string>
    <string name="has_deadline">Has deadline</string>
    <string name="event_deadline">This event has no deadline</string>
    <string name="event_repetition">Event Repetition</string>
    
    <string name="text_event_name">Title:</string>
    <string name="text_event_start">Start:</string>
    <string name="text_event_end">End:</string>
    <string name="text_event_location">Location:</string>
    <string name="text_event_category">Category:</string>
    <string name="text_event_movable">Movable:</string>
    <string name="text_none">None</string>
    <string name="text_yes">yes</string>
    <string name="text_no">no</string>
    
    <string name="place_autocomplete_quota_exceeded">The maximum free user number has been exceeded. You can retry tomorrow. Please donate or purchase GiveMeTime for full functionality!</string>
    <string name="place_autocomplete_key_outdated">Your application is outdated. Please update it on Play Store or send us an email if the error persists.</string>
    <string name="editor_constraints_datepicker_title">Date Constraints</string>
    <string name="editor_constraints_timepicker_title">Time Constraints</string>
    <string name="editor_constraints_daypicker_title">Week Day Constraints</string>
    <string name="editor_hasdeadline_text">This event has a deadline</string>
    <string name="editor_hasnodeadline_text">This event is a task without deadline</string>
    <string name="none">None</string>
	<string-array name="Repetitions">
	    <item>Do not repeat</item>
	    <item>Every Day</item>
	    <item>Every Week</item>
	    <item>Every Month</item>
	    <item>Every Year</item>
	    <item>Personalize</item>
	</string-array>
	<string name="question_list_description_locationmismatch">Location details about: </string>
	<string name="question_list_description_freetime">Found compatible event: </string>
	<string name="question_list_optimizing_question">I need information about: </string>
	<string name="question_relative_to_deleted_event">This event does not exist anymore</string>
	<string name="question_button_update">Update Event</string>
	<string name="question_button_cancel">Cancel</string>
	<string name="question_button_create">Create new Event</string>
	<string name="question_button_create_locationmismatch">I was doing something else</string>
	
</resources>
