<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_name" />
	    
	     <TextView
	        android:id="@+id/info_event_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_none"
	        android:textStyle="bold"
         />
	</RelativeLayout>
	
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_start" />
	    <TextView
	        android:id="@+id/info_event_start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_none"
	        android:textStyle="bold" />
	</RelativeLayout>
	
	<RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_end"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_end" />
	    <TextView
	        android:id="@+id/info_event_end"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_none"
	        android:textStyle="bold" />
	</RelativeLayout>
	
	<RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_location" />
	    <TextView
	        android:id="@+id/info_event_location"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_none"
	        android:textStyle="bold" />
	</RelativeLayout>
	
	<RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_category"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_category" />
	    <TextView
	        android:id="@+id/info_event_category"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_none"
	        android:textStyle="bold" />
	</RelativeLayout>
	
	<RelativeLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:padding="10dp"
	        android:orientation="horizontal">
	    <TextView
	        android:id="@+id/text_event_movable"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/text_event_movable" />    
	    <TextView
	        android:id="@+id/info_event_movable"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:text="@string/text_no"
	        android:textStyle="bold" />
	</RelativeLayout>

</LinearLayout>
