<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            style="?android:textAppearanceMedium"
            android:id="@+id/view"
            android:padding="16dp"
            android:lineSpacingMultiplier="1.2"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/secondPage"
            />

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/centerPoint"
                android:text="@string/skipButton"

                />

            <TextView
                android:id="@+id/centerPoint"
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />
            <Button
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/centerPoint"
                android:layout_alignParentRight="true"
                android:text="@string/continueButton"

                />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>