<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <TextView android:id="@+id/view" style="?android:textAppearanceMedium" android:layout_width="fill_parent" android:layout_height="0dp" android:layout_weight="0.19" android:gravity="top" android:lineSpacingMultiplier="1.2" android:padding="16dp" android:text="@string/secondPage"/>
        <Button android:id="@+id/api_test_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="API INIT" android:onClick="initializeApi"/>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/skipButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_toLeftOf="@+id/centerPoint"
                android:text="@string/skipButton"

                />

            <TextView
                android:id="@+id/centerPoint"
                android:text=""
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />
            <Button
                android:id="@+id/continueButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/centerPoint"
                android:layout_alignParentRight="true"
                android:text="@string/continueButton"

                />
        </RelativeLayout>

    </LinearLayout>


</ScrollView>